# PLVISION_complex_linux_project

./: Makefile  Makefile.am  README.md  configure.ac  struct.txt
task1/: Makefile.am  configure.ac
task1/src/: Makefile.am  main.cpp
task1/src/factorial_sqrt/: Makefile.am  factorial_sqrt.cpp  factorial_sqrt.h
task1/src/multiply_divide/: Makefile.am  multiply_divide.cpp  multiply_divide.h
task1/src/sum_substract/: Makefile.am  sum_substract.cpp  sum_substract.h
task2/: Makefile.am  configure.ac  setup_project_build.sh
task2/src/: Makefile.am  main.cpp
task2/src/upper_lower/: Makefile.am  lower.cpp  lower.h  upper.cpp  upper.h
task3/: Makefile.am  configure.ac
