# Write a text formatter that convert text entered by user in lower or upper case with next conditions:

# 1.  Function for text formatter should be compiled as a shared (dynamic) library (libconvert.so).

# 2.  The program should consist of two files. The first file (uper.c) of the program asks the user to enter text and translates it to uppercase. The second file (low.c) accordingly translates the text entered by the user into lower case.

# 3.  The compiled program should be linked with shared library using ldconfig

